fix footer width to avoid body overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,6 @@
 
 @import "{{ site.theme }}";
 
-footer {
-  width: auto;
-}
-
 header li {
   width: 80px;
 }
